--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Barbería Alura</title>
     <link rel="stylesheet" href="style.css">
-  
+
 </head>
+
 <body>
-    <h1 style="text-align:center;background: #CCCCCC">Sobre la Barbería Alura</h1>
-    <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba.
-        Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente</p>
+    <header>
+        <h1 class="titulo-principal">Barbería Alura</h1>
+    </header>
+    <img id="banner" src="img/banner.jpg">
+    <div class="principal">
 
-    <p style="font: size 20px; "><em>Nuestra misión es:<strong> "Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+        <h2 class="inicio">Sobre la Barbería Alura</h2>
 
-    <p >Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la
-        moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y
-        agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+        <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de
+            mejor para su cabello y barba.
+            Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente</p>
+
+        <p id="mision"><em>Nuestra misión es:<strong> "Proporcionar autoestima y calidad de vida a nuestros
+                    clientes"</strong>.</em></p>
+
+        <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el
+            mundo de la
+            moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de
+            excelencia y
+            agilidad, garantizando calidad y satisfacción de nuestros clientes.</p>
+    </div>
+    <div class="diferenciales">
+        <h3 class="titulo-diferenciales">Diferenciales</h3>
+        <ul class="lista-ul">
+            <li class="items">Atención personalizadas a los clientes</li>
+            <li class="items">Espacio diferenciado</li>
+            <li class="items">Localización</li>
+            <li class="items">Profesionales calificados</li>
+        </ul>
+        <img src="img\diferenciales.jpg" class="imagen-diferenciales">
+
+    </div>
 </body>
+
 </html>
-
-
